2003-02-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FileCmd.java (cmdProc):
	Add unimplemented command stubs for channels,
	link, normalize, separator, and system
	subcommands.
	* src/jacl/tcl/lang/FileUtil.java (doTildeSubst):
	Search for env(HOME) in the global variable table.
	* tests/defs: Add testchmod implementation for UNIX.
	* tests/jacl/FileCmd.test: Rework tests to match
	Tcl 8.4 and current Jacl implementation.

2003-02-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tclblend/loading.test: Rework a couple
	of tests to make errors showing up under JDK 1.4
	more clear. Remove core file if there is one.

2003-01-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FormatCmd.java (cmdProc, cvtStrToStr):
	Fixup failing format test cases that had to do with
	padding with zeros and negative width values.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tclblend/loading.test: Add unimplemented
	constraint so that loading-2.3 is not run.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl: Document shared UNIX/Windows
	build for Jacl.
	* README.tclblend: Document shared UNIX/Windows
	build for Tcl Blend.
	* new_features.txt: Added note about new
	Windows build system.
	* unix/README.jacl: Removed.
	* unix/README.tclblend: Removed.
	* win/README.jacl: Removed.
	* win/README.tclblend: Removed.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* bsjavac.sh: Add script that works around path
	separator issues under Win32.
	* configure: Regen.
	* tcljava.m4 (AC_PROG_JAVAC, AC_JAVA_JNI_LIBS,
	TCLJAVA_CHECK_TCLSH): Add support for JDK 1.1
	when building under mingw. This meant adding a
	special workaround to deal with path separator
	bugs in that version of javac. Also set the
	TCL_LIBRARY env var when running tclsh.
	* src/tclblend/tcl/lang/CObject.java: Don't
	make objPtr final to work around bug in
	brain dead jdk 1.1 compiler.
